--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,13 @@
 			<version>1.7.21</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
+			<version>3.7.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -154,7 +161,7 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-		<plugins>		
+		<plugins>
 			<plugin>
 				<!-- See: http://www.eclemma.org/jacoco/trunk/doc/examples/build/pom.xml -->
 				<groupId>org.jacoco</groupId>
